# AxonFlow

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.ps1  setup.sh
config/: .env.example  autoflow.yaml  axonflow.yaml
config/agents/: article-writer.yaml  coder.yaml  data-summarizer.yaml  hard-subtitle.yaml  media-asset-register.yaml  media-quality.yaml  minimax-m3-smoke-test.yaml  publisher.yaml  source-transcript.yaml  supervisor.yaml  tester.yaml  translator.yaml  video-highlight-renderer.yaml  video-highlight-scoring.yaml  video-highlight-selector.yaml  video-ingest.yaml  video-interval-refiner.yaml  video-scene-analysis.yaml  video-scene-features.yaml  video-transcription.yaml  wanqing-smoke-test.yaml  web-researcher.yaml
config/agents/coder/: config.yaml  soul.md  user.md  workflow.md
config/skills/code-review/: SKILL.md
config/workflows/: content-pipeline.yaml  dev-pipeline.yaml  minimax-m3-smoke-test.yaml  semantic-video-edit.yaml  supervised-dev-pipeline.yaml  wanqing-smoke-test.yaml
docker/: Dockerfile  docker-compose.yml
docs/: PRD.md  PROJECT_STRUCTURE.md  TECHNICAL_DESIGN.md
docs/specs/: 2026-04-02-tool-calling-and-skill-system-design.md
docs/superpowers/plans/: 2026-04-02-phase1-tool-calling-skill-system.md  2026-04-07-rename-autoflow-to-axonflow.md  2026-04-07-workflow-replay-log.md
docs/superpowers/specs/: 2026-04-08-frontend-web-ui-design.md
examples/semantic-video-edit/: README.md  run-demo.sh
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: LiveEventLog.tsx  StatusCard.tsx  WorkflowBuilder.tsx  WorkflowRunCanvas.tsx  YamlEditor.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: AgentDetail.tsx  Agents.tsx  Dashboard.tsx  Logs.tsx  Observability.tsx  Settings.tsx  Skills.tsx  WorkflowCreate.tsx  WorkflowDetail.tsx  WorkflowRun.tsx  Workflows.tsx
src/autoflow/: __main__.py  engine.py
src/autoflow/cli/: app.py
src/autoflow/config/: loader.py  models.py
src/autoflow/core/: agent.py  context.py  message.py  orchestrator_factory.py  supervisor.py  workflow.py
src/autoflow/llm/: gateway.py  prompt_builder.py
src/autoflow/memory/: __init__.py  local.py
src/autoflow/messaging/: __init__.py  base.py  memory_bus.py  redis_bus.py
src/autoflow/observability/: execution_log.py
src/autoflow/security/: sandbox.py
src/autoflow/tools/: __init__.py  (+5 more)
src/axonflow/: __init__.py  __main__.py  engine.py  json_utils.py
tests/: conftest.py
tests/integration/: test_media_quality_live.py  test_media_register_live.py  test_semantic_video_workflow_live.py  test_video_edit_tools_live.py  test_video_highlight_selector_live.py  test_video_scene_features_live.py  test_video_transcribe_subtitle_live.py
tests/unit/: test_agent_factory.py  test_agent_health.py  test_asset_routes.py  test_cli_engine.py  test_discovery.py  test_execution_log.py  test_highlight_precise_render.py  test_media_agents.py  test_media_compose.py  test_media_models.py  test_media_probe.py  test_media_register.py  test_media_render.py  test_media_storage.py  test_memory.py  test_message.py  test_message_bus.py  test_model_profile_routes.py  test_new_tools.py  test_orchestrator.py  test_persona_loader.py  test_platform.py  test_prompt_builder.py  test_providers.py  test_render_job_routes.py  test_render_jobs.py  test_render_runner.py  test_scheduler.py  test_semantic_video_workflow_config.py  test_skill_loader.py  test_skill_routes.py  test_structured_agent.py  test_subtitle_create.py  test_tool_calling.py  test_tools.py  test_video_edit_agents.py  test_video_scene_features_agent.py
(+96 files in other folders)
