[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axonflow"
version = "0.1.0"
description = "Multi-Agent Autonomous Workflow Engine — 基于多智能体的自治工作流引擎"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "AxonFlow Contributors" }]
keywords = ["multi-agent", "workflow", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM 统一调用层
    # 安全警告: litellm v1.82.7 和 v1.82.8 存在供应链投毒，必须排除
    "litellm>=1.80,!=1.82.7,!=1.82.8",

    # 配置 & 数据校验
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",

    # 消息队列
    "redis[hiredis]>=5.0,<6.0",

    # 异步 HTTP
    "aiohttp>=3.9,<4.0",

    # CLI
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",

    # 结构化日志
    "structlog>=24.0",

    # 定时调度
    "croniter>=2.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
axonflow = "axonflow.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/axonflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
